  in. Also added the ability to specify a directory for OpenSSL.
- ZIP_LINKS fixes/debugging.
- Code (comments) cleanup
- Fixed an ident bug, maybe it actually works now.. (#0000709) reported by marviiin.
- Added config error if link::options::zip was enabled at a non-zip compiled server.
- Fixed a bug with ZIP_LINKS + show-connect-info, also added fallback to uncompressed link.
- Updated protoctl.txt (added ZIP).
- Added USE_ZIP stuff to win32 installer script.
- Fixed a bug with except ban {} reported by Gargo (#0000604). As a result except tkl {} of
  type tkline and tzline have been removed since they are now handled by except ban {}
- Updated docs.
- Added set::restrict-usermodes so you can restrict which usermodes users can (un)set,
  for example you can force users to be all +G by setting G in modes-on-connect and
  also in restrict-usermodes. Ofcourse these restrictions do not apply to ircops.
  Feature suggested Gargo (#0000603).
- Fixed a bug in coadmin: global flags were not added (#0000716).
- Made ".. did a /whois on you" always show the real host (#0000705).
- Removed usermode +I (invisibility)
- Fixed link::port bug reported by AngryWolf: was signed so ports >32767 had problems
- Fixed a win32 bug that could cause crashes when editting files. Reported by camje_lemon
  (#0000717)
- Removed channel mode +H (not needed without umode +I)
- Allow coadmins to use /rehash -flags. Suggested by kyotou
- Added channel mode +M. Can't talk unless you are using a registered nick. Suggested by 
  CaliMonk
- Fixed compile warning in ssl.c.
- Updated docs, removed umode +I and cmode +H and added cmode +M
- Removed some left over +I code
- Added set::restrict-usermodes to /stats S (reported by AngryWolf)
- Zip links: Added link::compression-level so you can set the compression level per link.
- set::services-server is now required to be set (#0000730).
- Fixed /list memory leak.