@@ -1913,3 +1913,4 @@ seen. gmtime warning still there
 - Zip links: Added link::compression-level so you can set the compression level per link.
 - set::services-server is now required to be set (#0000730).
 - Fixed /list memory leak.
+- Fixed MyConnect()/MyClient() bug causing memory leak.
